--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -39,7 +39,7 @@
     <div class="page-margin">
 		<div class="header">
 			<div class="header-logo left" id="header-logo">
-				<img src="/images/logo.png" alt="Kwak Family Medicine FC"/>
+				<a href="/index"><img src="/images/logo.png" alt="Kwak Family Medicine FC" border="0"/></a>
 			</div>
             <div class="social-connect right">                
 				<a href="http://www.facebook.com/pages/Kwak-Family-Medicine-PC/158413460880351"><img src="/images/icon_fb.png" border="0" alt="Facebook"></a>
@@ -58,10 +58,19 @@
 					<li<?php echo ($this->action == 'contact' ? ' class="current"' : '') ?>><div><a href="/index/contact"><?php echo _t("LBL_MENU_Contact us");?></a></div></li>
 					<li<?php echo ($this->action == 'faq' ? ' class="current"' : '') ?>><div><a href="/index/faq"><?php echo _t("LBL_MENU_FAQ");?></a></div></li>
 					<li<?php echo ($this->action == 'insurance' ? ' class="current"' : '') ?>><div><a href="/index/insurance"><?php echo _t("LBL_MENU_Insurance");?></a></div></li>
-					<li<?php echo ($this->action == 'news' ? ' class="current"' : '') ?>><div><a href="/index/news"><?php echo _t("LBL_MENU_News");?></a></div></li>
+					<!--<li<?php echo ($this->action == 'news' ? ' class="current"' : '') ?>><div><a href="/index/news"><?php echo _t("LBL_MENU_News");?></a></div></li>-->
 					<li<?php echo ($this->action == 'links' ? ' class="current"' : '') ?>><div><a href="/index/links"><?php echo _t("LBL_MENU_Links");?></a></div></li>
 					<li<?php echo ($this->action == 'forms' ? ' class="current"' : '') ?>><div><a href="/index/forms"><?php echo _t("LBL_MENU_Forms");?></a></div></li>
                     <li<?php echo ($this->action == 'newsletters' ? ' class="current"' : '') ?>><div><a href="/index/newsletters"><?php echo _t("LBL_MENU_Newsletters");?></a></div></li>
+                    <li<?php echo (($this->action == 'login' || $this->action == 'logout') ? ' class="current"' : '') ?>>
+                        <div>
+                        <?php if (VNMLS_Model_Table_Users::getCurrentUserID()){ ?>
+						    <a href="/index/logout">Logout</a>
+					    <?php }else{ ?>
+                        <a href="/index/login"><?php echo _t("LBL_MENU_My Patient Page");?></a>
+                        <?php } ?>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="clr"></div>
