add translate to title for all page

--- a/application/views/scripts/index/contact.phtml
+++ b/application/views/scripts/index/contact.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">How could</div>
-        <div class="main">we be reached?</div>
+        <div class="sub"><?php echo _t("How could")?></div>
+        <div class="main"><?php echo _t("we be reached?")?></div>
         </div>                    
     <div class="detail-content-contact">                        
         <div>
