--- a/application/views/scripts/index/faq.phtml
+++ b/application/views/scripts/index/faq.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">How could we</div>
-        <div class="main">response you</div>
+        <div class="sub"><?php echo _t("How could we")?></div>
+        <div class="main"><?php echo _t("response you")?></div>
         </div>                    
     <div class="detail-content-faq">                        
         <?php echo $this->body; ?>
