--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">Welcome to</div>
-        <div class="main">our site</div>
+        <div class="sub"><?php echo _t("Welcome to")?></div>
+        <div class="main"><?php echo _t("our site")?></div>
     </div>
     <div class="detail-content">     
 	    <div style="margin:-5px 0 10px 10px;position: relative;cursor:pointer;">
