--- a/application/views/scripts/index/insurance.phtml
+++ b/application/views/scripts/index/insurance.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">What about</div>
-        <div class="main">insurance?</div>
+        <div class="sub"><?php echo _t("What about")?></div>
+        <div class="main"><?php echo _t("insurance?")?></div>
         </div>                    
     <div class="detail-content-contact">                        
         <div>    
