--- a/application/views/scripts/index/links.phtml
+++ b/application/views/scripts/index/links.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">You should</div>
-        <div class="main">know them</div>
+        <div class="sub"><?php echo _t("You should")?></div>
+        <div class="main"><?php echo _t("know them")?></div>
         </div>                    
     <div class="detail-content-news">
         <?php echo $this->body; ?>
