--- a/application/views/scripts/index/forms.phtml
+++ b/application/views/scripts/index/forms.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">For your</div>
-        <div class="main">convenience</div>
+        <div class="sub"><?php echo _t("For your")?></div>
+        <div class="main"><?php echo _t("convenience")?></div>
         </div>                    
     <div class="detail-content-forms">                        
         <div>
