--- a/application/views/scripts/index/location.phtml
+++ b/application/views/scripts/index/location.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">We woud welcome</div>
-        <div class="main">you here</div>
+        <div class="sub"><?php echo _t("We woud welcome")?></div>
+        <div class="main"><?php echo _t("you here")?></div>
         </div>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript">
