--- a/application/views/scripts/index/newsletters.phtml
+++ b/application/views/scripts/index/newsletters.phtml
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="/css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">Catch up our</div>
-        <div class="main">seasonal release</div>
+        <div class="sub"><?php echo _t("Catch up our")?></div>
+        <div class="main"><?php echo _t("seasonal release")?></div>
         </div>                    
     <div class="detail-content-newsletter">                        
         <div>
