--- a/application/views/scripts/index/about.phtml
+++ b/application/views/scripts/index/about.phtml
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="page-title">
-        <div class="sub">About</div>
-        <div class="main">Dr Kwak</div>
+        <div class="sub"><?php echo _t("About")?></div>
+        <div class="main"><?php echo _t("Dr Kwak")?></div>
     </div>
     <div class="detail-content">     
 	    <div style="margin:-5px 0 10px 10px;position: relative;cursor:pointer;">
