--- a/application/views/scripts/index/about.phtml
+++ b/application/views/scripts/index/about.phtml
@@ -3,7 +3,8 @@
         <div class="sub"><?php echo _t("About")?></div>
         <div class="main"><?php echo _t("Dr Kwak")?></div>
     </div>
-    <div class="detail-content">     
+    <div class="detail-content">
+        <!--     
 	    <div style="margin:-5px 0 10px 10px;position: relative;cursor:pointer;">
             <a href="http://www.youtube.com/watch?v=WsxlGwxFa48" rel="prettyPhoto">
             <div style="position: absolute;left:217px;top:110px;">
@@ -12,6 +13,12 @@
 		    <img width="537" alt="Welcome to Kwak Family Medicine video" src="/images/a_talk_with_dr_kwak.jpg"/>
             </a>		
 	    </div>
+        -->
+        <div style="text-align: center;padding-bottom: 15px;">
+            <a href="/images/dr_kwak_full.jpg" rel="prettyPhoto">
+            <img width="300" alt="About Dr Kwak" src="/images/dr_kwak.jpg"/>
+             </a>
+        </div>
 	    <?php echo $this->body; ?>
     </div>
 </div>
